--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/graphql": "^10.0.22",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.2.1",
+    "@quixo3/prisma-session-store": "^3.1.8",
     "apollo-server-express": "^3.10.1",
     "express-session": "^1.17.3",
     "graphql": "^16.6.0",
@@ -40,6 +41,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
