--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@prisma/client": "^4.2.1",
     "@quixo3/prisma-session-store": "^3.1.8",
     "apollo-server-express": "^3.10.1",
+    "bcrypt": "^5.0.1",
     "express-session": "^1.17.3",
     "graphql": "^16.6.0",
     "pluralize": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
