config file added

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@quixo3/prisma-session-store": "^3.1.8",
     "apollo-server-express": "^3.10.1",
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
     "express-session": "^1.17.3",
     "graphql": "^16.6.0",
     "pluralize": "^8.0.0",
