--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.0.1",
     "express-session": "^1.17.3",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
     "pluralize": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
