transition to cookies on its way

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL = "mysql://root:VjL0inZgP9EtGrMrm6Q3@containers-us-west-105.railway.app:6462/railway"
+DATABASE_URL = "mysql://root:root@localhost:3306/cabbage"
 PORT = 3000
 SECRET = k0k05hk@t@3j3n@n@p3t31@
