--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@quixo3/prisma-session-store": "^3.1.8",
     "apollo-server-express": "^3.10.1",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express-session": "^1.17.3",
     "graphql": "^16.6.0",
@@ -44,6 +45,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/jest": "28.1.4",
