--- a/package.json
+++ b/package.json
@@ -21,25 +21,25 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@liaoliaots/nestjs-redis": "^9.0.4",
     "@nestjs/apollo": "^10.0.22",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.0.22",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^2.1.0",
     "@prisma/client": "^4.2.1",
-    "@quixo3/prisma-session-store": "^3.1.8",
     "apollo-server-express": "^3.10.1",
     "bcrypt": "^5.0.1",
+    "cache-manager": "^5.1.4",
+    "cache-manager-redis-yet": "^4.0.1",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
-    "express-session": "^1.17.3",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
-    "ioredis": "^5.2.4",
     "pluralize": "^8.0.0",
+    "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -50,6 +50,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/jest": "28.1.4",
